[package]
name = "gracekill"
version = "0.1.2"
edition = "2024"
authors = ["Pato Lankenau <rust@p.lankenau.io>"]
description = "A minimal utility to gracefully terminate processes with graceful escalation of SIGTERM to SIGKILL"
license = "MIT"
repository = "https://github.com/pato/gracekill"
readme = "README.md"
keywords = ["process", "signal", "kill", "unix", "graceful"]
categories = ["command-line-utilities"]

[dependencies]
nix = { version = "0.30", features = ["signal", "process"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
